fix(#2193): arrow-java --add-opens — kit jvm.config provisioning + connector fail-fast + docs (#2297)
* claim issue-2290 pmcfadin-ltmcx74-8390-84894

* fix(#2193): fail fast at connector init when arrow-java add-opens flag is missing

The CQLite Flight connector's RootAllocator forces arrow-java's MemoryUtil
static initializer, which on JDK 17+ requires
--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED.
Without it, MemoryUtil.<clinit> fails and every do_get dies far downstream
with a cryptic 'Failed to read message'. ArrowMemoryPreflight probes the
init once at connector construction (before the first allocator) and raises
a CONFIGURATION_INVALID error naming the exact missing flag + jvm.config
remedy. Side-effect-free when the flag is present.

* fix(#2193): kit injects arrow add-opens flag + docs Required JVM configuration

- k8s trino-cqlite kit: inject JAVA_TOOL_OPTIONS add-opens into both
  coordinator and worker container specs via the always-run strategic patch
  (additive, idempotent by strategic-merge env-by-name semantics).
- README + docs-site flight-trino.md: 'Required JVM configuration' section
  (the exact flag, why arrow-java needs it on JDK17+, the fail-fast behavior).
- docker/trino/jvm.config: align to arrow-java's documented specific form so
  docker, kit, and the fail-fast message all name the identical flag.
- PR_BODY.md: explains the docker e2e blind spot.

* fix(#2290): address review — force off-heap probe, append JAVA_TOOL_OPTIONS, bounded cause walk

BLOCKER 1: ArrowMemoryPreflight.verify() now allocates+closes a 1-byte off-heap
ArrowBuf so the probe forces MemoryUtil/DirectByteBuffer init along the real
off-heap path, not just RootAllocator construction.

BLOCKER 2: reapply-plugin-patch.sh.template computes JAVA_TOOL_OPTIONS as
<existing> + arrow flag (append-if-absent, idempotent) by reading the live
Deployment's current value, for coordinator AND worker — no longer clobbers a
pre-existing value. Comment updated to s